# rwa-token-standard

./: Anchor.toml  README.md  package-lock.json
programs/rwa-token-standard/: Cargo.toml
programs/rwa-token-standard/src/: constants.rs  lib.rs  utils.rs
programs/rwa-token-standard/src/instructions/: create_asset.rs  mod.rs
programs/rwa-token-standard/src/states/: asset.rs  config.rs  mod.rs
programs/rwa-token-standard/tests/: .rwa_test.rs  rwa_test.rs
tests/: rwa-token-standard.ts
