[package]
name = "rwa-token-standard"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rwa_token_standard"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = "0.31.1"
anchor-spl = { version="0.31.1", features=["metadata"]}

[dev-dependencies]
litesvm = "0.6.1"
solana-keypair = "2.2.0" 
solana-message = "2.2.0"
solana-system-interface = "1.0.0"
solana-transaction = "2.2.0"
solana-pubkey = "2.2.0"
solana-signer = "2.2.0"
solana-instruction = "2.2.0"
solana-program = "2.2.0"
spl-token = "8.0.0"
spl-token-2022 = { version = "8.0.1", features = ["no-entrypoint"] }
mpl-token-metadata = { version = "5.1.0"}

